[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2021"


[dependencies]
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0"

rand = "0.8"

tokio = { version = "1.20", features = ["full"] }
tokio-rustls = "0.23"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pin-project-lite = "0.2"

clap = "4.0"
clap-verbosity-flag = "2.0"

rlimit = "0.8"


#https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true